--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
+button{
+  width: 100px;
+  height: 100px;
+  padding: 5px;
+  margin: 10px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size: larger;
+  border: 0px;
+  border-radius: 40%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.button1 , .arrayofcolors{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.outerdiv{
+  background-color: aquamarine;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+  height: 300px;
+  border-radius: 10%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+*{
+  padding: 10px;
 }
